# openweather

./: .gitignore  CMakeLists.txt  sdkconfig.old
components/buttons/: CMakeLists.txt  buttons.c
components/buttons/include/: buttons.h
components/get_time/: CMakeLists.txt  get_time.c
components/get_time/include/: get_time.h
components/get_weather/: CMakeLists.txt  get_weather.c
components/st7789/: CMakeLists.txt  st7789.c
components/st7789/include/: st7789.h
components/wifi_connect/: wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  idf_component.yml  openweather.c
main/fonts/: jb_mono_bold_64.c  jb_mono_reg_20.c  jet_mono_light_32.c
